--- a/Week1/css/styleSheet.css
+++ b/Week1/css/styleSheet.css
@@ -4,10 +4,52 @@ body {
 }
 
 #heading {
-    color: blue;
+    color: rgb(78, 78, 255);
 }
 
 h2 {
-    text-emphasis-style: bold;
+    font-size: large ;
 }
 
+ul {
+    text-align: center;
+    list-style-type: none;
+}
+
+li {
+    text-align: center;
+    padding-top: 1.5vw;
+    padding-bottom: 3vw;
+
+
+}
+
+li:hover {
+    text-align: center;
+    display: block;
+    border-style:hidden;
+    background-color: rgb(248, 233, 221);
+    padding-top: 1.5vw;
+    padding-bottom: 3vw;
+
+}
+
+button {
+    text-align: center;
+    padding: 3vw;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    border-style:solid;
+    border-radius: 25%;
+    background-color: blue;
+    color: aliceblue;
+}
+
+button:hover{
+    background-color:white ;
+    color: black;
+}
+
+footer {
+    padding: 5vw;
+}
