--- a/Week1/css/styleSheet.css
+++ b/Week1/css/styleSheet.css
@@ -35,7 +35,8 @@ li:hover {
 }
 
 button {
-    text-align: center;
+    display: block;
+    margin: 0 auto;
     padding: 3vw;
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
